--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "dotenv": "^16.3.1",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.1.0",
+    "multer": "^1.4.5-lts.1",
+    "node-forge": "^1.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
